# nafld_system

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
notebooks/: data_loader.ipynb  model.ipynb
references/: NAFLD-system.drawio
src/: local_config.example.py
src/nafld/config/: base_config.py
src/nafld/models/: abstract_model.py  data_preparation.py
src/nafld/models/all_models/: __init__.py  ada_boost.py  decision_tree.py  ensemble.py  k_nearest_neighbours.py  logistic_regression.py  multi_layer_perceptron.py  random_forest.py  support_vector_classifier.py  xgboost.py
src/nafld/models/configs/: hyper_parameter_config.py  models_config.py
src/nafld/models/model_saver_loader/: model_saver.py  models_config.py
src/nafld/system/: diagnosis.py  global_raport.py  model_creator.py  model_funcionality.py  original_data_loader.py
src/nafld/table/: columns_enum.py  processed_table.py
src/nafld/table/tables/: abstract_table.py  base_table.py  features.py  static_table.py
src/nafld/utils/: argument_parsing.py  base_config.py  get_config.py  initialize_environment.py
src/nafld/utils/io_utils/: load_csv_to_parquet.py
src/nafld/utils/model_utils/: best_parameters_loader.py
src/runscripts/: step_1_4a_create_models.py  step_1_5_diagnose_patients.py
src/runscripts/manage_data/: import_original_data.py  step_1_2_load_and_prepare_raw_data.py  step_1_3_load_base_features.py
src/runscripts/manage_data/configs/: step_1_2_config.py  step_1_4_config.py  step_1_5_config.py
